# Kernel

./: CMakeLists.txt  README.md  matmul-performance.csv  script.py
include/: kernel.h
lib/: sgemm.cu  sgemv.cu  sort.cu  transpose.cu
lib/cuda/: reduce.cu  softmax.cu
lib/cute/: gemm-simple.cu  vector_add.cu
triton/: matmul.py
